fix font size of header elements on mobile

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -16,6 +16,7 @@
   border-radius: 4px;
   background-color: #00ffa7;
   color: rgb(30, 34, 39);
+  font-size: 0.75rem;
 }
 
 .site-title {
@@ -26,7 +27,7 @@
 
 
 h1 {
-  font-size: 2rem;
+  font-size: 1.5rem;
   width: 100%;
 }
 
@@ -45,6 +46,10 @@ hr {
 
   hr {
     width: 75%;
+  }
+
+  .job {
+    font-size: 1.2rem;
   }
 
 }
